# BringYourOwnRecipe

./: .env.example  .gitignore  CLAUDE.md  make_app.py  pyproject.toml  requirements.txt
BringYourOwnRecipe.app/Contents/: Info.plist
BringYourOwnRecipe.app/Contents/MacOS/: launch
BringYourOwnRecipe.app/Contents/Resources/: AppIcon.icns
app/: bring_client.py  claude_client.py  main.py
app/static/: index.html
