[project]
name = "bringyourownrecipe"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.13.5",
    "anthropic>=0.94.1",
    "bring-api>=1.1.1",
    "fastapi>=0.135.3",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.26",
    "uvicorn[standard]>=0.44.0",
    "qrcode>=8.0",
]

[project.scripts]
byor = "app.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
